Refactored to fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="find_us">Här hittar du oss:</string>
     <string name="name">Midgårdens Värdshus</string>
     <string name="address">Midgårdsgatan 1,\n262 71 Ängelholm</string>
+    <string name="phone_number">0431\-41 05 10</string>
+    <string name="call_us">Telefon:</string>
+    <string name="opening_hours">Öppettider:</string>
+    <string name="times_lunch">Lunch 11.00 - 14.00</string>
+    <string name="times">Måndag – Fredag \t10.00 – 16.00 \nLördag 10.00 – 15.00</string>
 </resources>
