Recycle view and card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="find_us">Här hittar du oss:</string>
     <string name="name">Midgårdens Värdshus</string>
     <string name="address">Midgårdsgatan 1,\n262 71 Ängelholm</string>
-    <string name="phone_number">0431\-41 05 10</string>
+    <string name="phone_number">0431 - 41 05 10</string>
     <string name="call_us">Telefon:</string>
     <string name="opening_hours">Öppettider:</string>
     <string name="times_lunch">Lunch 11.00 - 14.00</string>
